--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,7 +148,7 @@ import { SITE_CONFIG } from '@/config/site';
 
         <div class="relative">
           <img
-            src="/Tualatin-RIver-Tualatin-Community-Park.jpg"
+            src={`${import.meta.env.BASE_URL}Tualatin-RIver-Tualatin-Community-Park.jpg`}
             alt="Beautiful paddle boarding location with calm waters"
             class="rounded-lg shadow-lg w-full h-80 object-cover"
           />
